<resources>
    <string name="app_name">Hello</string>
    <string name="str1">Welcome to Temperature Conversion!</string>
    <string name="str2">Please enter Celsius temperature:</string>
    <string name="btn_label">Convert to Fahrenheit temperature</string>
    <string name="str3">The Fahrenheit temperature is: </string>
    <string name="btn_dollar_label" translatable="false">Dollar </string>
    <string name="btn_euro_label" translatable="false">Euro </string>
    <string name="btn_won_label" translatable="false">Won </string>
    <string name="btn_config_label" translatable="false">Config</string>
    <string name="rmb_hint" translatable="false">Input RMB</string>
    <string name="menu_set_label" translatable="false">Setting</string>
    <string name="label_open_list" translatable="false">OpenList</string>
    <string name="rdo_home_label1" translatable="false">首页</string>
    <string name="rdo_func_label1" translatable="false">功能</string>
    <string name="rdo_setting_label1" translatable="false">设置</string>


</resources>
